# device-detection-varnish

./: .gitignore  .gitmodules  Makefile.am  README.md  build-and-test.yml  configure.ac  example.vcl  vmod_51degrees_device_detection.json
ci/: build-and-test.yml  create-tag.yml  deploy.yml  shared-build-and-test-stages.yml
docs/: Doxyfile  DoxygenLayout.xml
examples/hash/: clientHints.vcl  config.vcl  gettingStarted.vcl  matchAll.vcl  metadata.vcl
src/: Makefile.am  vmod_fiftyonedegrees.c  vmod_fiftyonedegrees.rst  vmod_fiftyonedegrees.vcc  vmod_fiftyonedegrees.vcc.template  vmod_fiftyonedegrees.vcc.template.test  vmod_fiftyonedegrees_extra.h.template  vmod_fiftyonedegrees_interface.h  vmod_fiftyonedegrees_test.c
src/tests/: allow_unmatched.vtc  fod_config.vtc  match_all.vtc  match_ch.vtc.skipped  match_single.vtc  perf_prof_default.vtc  perf_prof_hiperf.vtc  perf_prof_inmem.vtc  perf_prof_lowmem.vtc  perf_prof_unrecogized.vtc  properties.vtc  reload_diff_file.vtc  reload_same_file.vtc  set_ch_header.vtc  set_ch_header_append.vtc  version.vtc
